# icalevents

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  main.py  make.bat  pyproject.toml  read.py  requirements.txt  setup.py  test.py
.devcontainer/: devcontainer.json
.github/: codecov.yml
.github/workflows/: python-publish.yml  python-test.yml  release.yml  tests.yml
docs/: conf.py  index.rst
icalevents/: icaldownload.py  icalevents.py  icalparser.py  zones.py
source/: conf.py  index.rst
test/: __init__.py  test_icaldownload.py  test_icalevents.py  test_icalparser.py
test/test_data/: basic_content.txt  basic_latin1.ics  categories_test.ics  cest.ics  cest.ics_2021_01_01-2021-12-31  cest_every_day_for_one_year.ics  cest_every_second_day_for_one_year.ics  cest_with_deleted.ics  created_last_modified.ics  duration.ics  floating.ics  google_2024.ics  google_tz.ics  icloud.ics  icloud_content.txt  ms_tz.ics  multi_attendee_response.ics  multi_exdate_same_line_ms.ics  no_description.ics  no_uid.ics  non_ascii_uid.ics  non_floating.ics  per_event_timezone.ics  recurr_id_dtstart_missmatch.ics  recurrence_tz.ics  recurrence_tzinfo.ics  recurrenceid_google.ics  recurrenceid_ms.ics  recurring.ics  recurring_alarm.ics  recurring_event_single_modified.ics  recurring_exdate.ics  recurring_override.ics  recurring_small_window.ics  regression_offset_native.ics  response.ics  rrule_until.ics  rrule_until_all_day.ics  rrule_until_all_day_google.ics  rrule_until_all_day_ms.ics  (+4 more)
