[tool.poetry]
name = "icalevents"
version = "0.1.29"
description = "Simple Python 3 library to download, parse and query iCal sources."
authors = ["Martin Eigenmann <github@eigenmannmartin.ch>", "Thomas Irgang <thomas@irgang.eu>",
    "Alexander Hultnér <ahultner+github@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
icalendar = "^6.0.0"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
urllib3 = "^2.3.0"

[tool.poetry.dev-dependencies]
coverage = "^6.0.1"
pytest = "^8.3.2"
black = "^24.3.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
